objects/Gap_Analysis_Form__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BX_041__c</fullName>
        <label>BX-041</label>
        <referenceTo>BX_041__c</referenceTo>
        <relationshipLabel>Gap Analysis Forms</relationshipLabel>
        <relationshipName>Gap_Analysis_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gap_Name__c</fullName>
        <label>Gap Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Metadata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Metadata</label>
        <referenceTo>Question_Metadata__c</referenceTo>
        <relationshipLabel>Gap Analysis Forms</relationshipLabel>
        <relationshipName>Gap_Analysis_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Gap Analysis Form</label>
    <nameField>
        <displayFormat>GAF-{000000}</displayFormat>
        <label>Gap Analysis Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gap Analysis Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>